Fixed some layout issues

--- a/FP.CSS
+++ b/FP.CSS
@@ -15,7 +15,7 @@ body {
 
 .row {
     width:100%;
-    max-width: 1200px;
+    max-width: 1024px;
     margin:0 auto;
 }
 
@@ -42,6 +42,10 @@ li {
     list-style-type: none;
 }
 
+button {
+    cursor: pointer;
+    border: none;
+}
 
 /* NAVIGATION BAR */
 
@@ -192,14 +196,13 @@ nav {
 
     /* Header */
 
-    .container {
+    header .row {
         display: flex;
+        align-items: center;
         justify-content: space-between;
-        min-height: 60vh;
-        font-size: 24px;
-        padding: 24px;
-        
     }
+
+    
 
 
     .header__description {
@@ -224,7 +227,7 @@ nav {
 
     .header__img {
         width:100%;
-        max-width: 568px;
+        max-width: 768px;
     }
 
     .header__email--input {
@@ -257,9 +260,42 @@ nav {
         opacity: .4
      }
 
+     header {
+        position:relative;
+     }
+
      /* Features */
 
-    
+     .conatainer {
+        padding: 96px 0;
+     }
+
+     #features {
+        position:relative;
+     }
+
+     #features .row__narrow {
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+     }
+
+    #features .row__narrow {
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+    }
+
+    #features .section__para {
+        text-align: center;
+        max-width: 576px;
+    }
+
+    .row__narrow {
+        width:100%;
+        max-width: 1024px;
+        margin: 0 auto;
+    }
       .feature__titles {
         display:flex;
         justify-content: center;
@@ -271,20 +307,56 @@ nav {
         
     }
 
+    
+
     .section__title {
         text-align: center;
         font-size: 64px;
     }
 
 
-    .features__all {
-        display:flex;
-        flex-wrap: wrap;
-        width:25%;
-        margin: 24px;
-        
 
-    }
+.features {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+.feature {
+    width: calc(100% / 3);
+}
+
+.feature__row {
+    display: flex;
+    align-items: flex-start;
+    padding: 32px 24px;
+}
+
+.feature__img--wrapper {
+    display: flex;
+    padding: 20px;
+    border: 1px solid #e5e7eb;
+    border-radius: 500px;
+}
+
+.feature__img {
+    width: 24px;
+    height: 24px;
+}
+
+.feature__text {
+    margin-top: 8px;
+    margin-left: 16px;
+}
+
+.feature__para {
+    margin-top: 16px;
+    font-size: 16px;
+    max-width: calc(634px / 3);
+    color: rgb(124, 139, 161);
+    line-height: 2;
+    font-weight: 500;
+}
 
     .features__description {
         display:flex;
@@ -294,7 +366,7 @@ nav {
         text-align:center;
         padding: 48px;
     }
-    .feature__img--border {
+    .feature__img--wrapper {
         border: 2px solid rgb(229, 231, 235);
         padding: 20px 20px 14px 20px;
         border-radius: 500px;
@@ -307,8 +379,10 @@ nav {
             
         }
 
-        .features__row {
+        .feature__row {
             display:flex;
+            align-items:flex-start;
+            padding:32px 24px;
             
         }
 
@@ -321,6 +395,12 @@ nav {
 
         /*Quality*/
 
+        #quality .row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        
         .container1 {
                 display: flex;
                 justify-content: space-between;
@@ -345,21 +425,16 @@ nav {
         }
 
         .quality__description {
-            display: flex;
-        
-            
-        
+            max-width:576px;
+            margin-right: 64px;
+            width: 50%;
         }
-
-        
-
-    
+         
         .screenshot {
             padding: 200px 48px 20px 20px;
             display:flex;
             width: 100%;
-        
-        }
+             }
 
         .quality__titles {
             font-size: 48px;
@@ -485,16 +560,28 @@ nav {
     }
 
     .value__title {
-        padding: 48px 0px 0px 0px;
-        display:flex;
+          display:flex;
         align-items:center;
+        padding: 16px;
+    }
+    .values__list {
+        display:flex;
     }
 
+    .section__para--values {
+        padding: 16px 0px 48px 0px;
+    }
+
+    
+    
+    
+
     .value__img--wrapper {
-        
+        display:flex;
         background-color: rgb(179, 228, 156);
         border-radius: 500px;
         padding: 5px;
+        max-width:24px;
     }
     .value__name {
         font-weight: bold;
@@ -502,23 +589,24 @@ nav {
         padding: 0px 0px 0px 20px;
     }
 
-    .values__para {
+    .value__para {
         font-size: 18px;
-        padding: 18px 0px 0px 0px;
+        padding: 18px;
     }
 
     .value__img--wrappers {
-        
+        display:flex;
         background-color: rgb(245, 161, 146);
         border-radius: 500px;
         padding: 5px;
+        
     }
 
     .fa-briefcase {
         color: red;
     }
 
-    .value__imgs {
+    .values__imgs {
        display: flex;
        justify-content:center;
        width: 50%;
